Сделал удаление последней цифры в пароле.

--- a/src/containers/Password/Password.css
+++ b/src/containers/Password/Password.css
@@ -1,14 +1,28 @@
-.Password {
-    width: 175px;
-    margin-right: 40px;
-    font-size: 24px;
-    margin-bottom: 20px;
-    height: 60px;
+.Password,
+.correct,
+.incorrect {
+  width: 175px;
+  margin-right: 40px;
+  font-size: 24px;
+  margin-bottom: 20px;
+  height: 60px;
+}
+
+.correct {
+  background: green;
+  color: white;
+  border-radius: 5px;
+}
+
+.incorrect {
+  background: red;
+  color: white;
+  border-radius: 5px;
 }
 
 .password-container {
-    display: flex;
-    flex-wrap: wrap;
-    width: 215px;
-    gap: 15px
+  display: flex;
+  flex-wrap: wrap;
+  width: 215px;
+  gap: 15px;
 }
