--- a/src/containers/Password/Password.css
+++ b/src/containers/Password/Password.css
@@ -14,6 +14,11 @@
   border-radius: 5px;
 }
 
+.btn {
+  margin-right: 40px;
+  margin-bottom: 10px;
+}
+
 .incorrect {
   background: red;
   color: white;
